remove vertPos and horizPos